[package]
name = "kddbscan"
version = "0.1.0"
authors = ["WhizSid <whizsid@aol.com>"]

license = "MIT"
keywords = ["data-science", "cluster", "dynamic","density","deviation"]
homepage = "https://github.com/whizsid/kddbscan-rs"
repository = "https://github.com/whizsid/kddbscan-rs"
documentation = "https://docs.rs/kddbscan"
edition = "2018"
readme = "README.md"
description = """
A k -Deviation Density Based Clustering Algorithm (kDDBSCAN)
"""


[dependencies]
ordered-float = "1.0.2"
